using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Scripts.Utilities
{
    /// <summary>
    /// Class to hold Animation paremeter names for ease of use.
    /// </summary>
    public static class AnimationParameters
    {
        public static string ACTION_PICKUP => "ACTION_PICKUP";
        public static string ACTION_ACTIVATE => "ACTION_ACTIVATE";
        public static string MOVEMENT_VELOCITY_X => "MOVEMENT_VELOCITY_X";
        public static string MOVEMENT_VELOCITY_Z => "MOVEMENT_VELOCITY_Z";
        public static string MOVING => "MOVING";
        public static string SPRINT => "SPRINT";
    }
}
